Improved api functionality, improved style choices

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
                     <button type="submit" id="submit-button">Submit</button>
                     <button type="submit" id="save-button">Save City as Default</button>
                     <div id="current-weather">
-                        <h2>Current Weather</h2>
-                        <img class="weather-icon" id="current-weather-icon">
-                        <span class="temp" id="current-temp"></span>
+                        <h2 id="current-title">Current Weather</h2>
+                        <div id="current-weather-holder">
+                            <img class="weather-icon" id="current-weather-icon">
+                            <span class="temp" id="current-temp"></span>
+                            <span id="temp-gauge">F° | <a>C°</a></span>
+                        </div>
                     </div>
                     <div id ="five-day-weather">
                         <h2>Five Day Forecast</h2>
